Fix RTL select dropdown arrow spacing

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -22,7 +22,17 @@
 }
 
 .form-select-safe {
-    padding-inline-end: 2.75rem;
+    -webkit-appearance: none;
+    appearance: none;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20' fill='%23475569'%3E%3Cpath fill-rule='evenodd' d='M5.23 7.21a.75.75 0 0 1 1.06.02L10 11.17l3.71-3.94a.75.75 0 1 1 1.08 1.04l-4.25 4.5a.75.75 0 0 1-1.08 0l-4.25-4.5a.75.75 0 0 1 .02-1.06Z' clip-rule='evenodd'/%3E%3C/svg%3E");
+    background-position: right 0.875rem center;
+    background-repeat: no-repeat;
+    background-size: 1rem 1rem;
+    padding-inline-end: 3rem;
+}
+
+[dir="rtl"] .form-select-safe {
+    background-position: left 0.875rem center;
 }
 
 .scrollbar-soft {
